# copilot-team

./: .gitignore  README.md  STRUCTURE.md  pyproject.toml
.github/: copilot-instructions.md
src/: config.toml
src/copilot_team/: __init__.py  agents.py  dependencies.py  main.py  repository_manager.py  settings.py  tasks.py  team.py
src/copilot_team/agents/tools/: chat_tools.py
src/copilot_team/agents/worker/: repository_manager.py
src/copilot_team/backends/: sqlite_task_store_backend.py
src/copilot_team/core/: dependencies.py  exceptions.py  interfaces.py  models.py  services.py  settings.py
src/copilot_team/tui/: app.py  chat_tools.py  messages.py  pydantic_form.py  styles.tcss
src/copilot_team/tui/screens/: chat.py  settings.py  story_form.py  task_form.py  tree_view.py
tests/: conftest.py  test_chat_tools.py  test_pydantic_form.py  test_services.py  test_tui.py
